syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "GrpcServiceOrder.Cart";

service CartGrpc{
	rpc GetAll(Empty) returns (Carts);
	rpc GetAllOfUser(Id) returns (Carts);
	rpc GetAllOfProduct(Id) returns (Carts);
	rpc GetOne(Id) returns (Cart);
	rpc Create(CreateCart) returns (Response);
	rpc Update(Cart) returns (Response);
	rpc Delete(Id) returns (Response);
	rpc DeleteMany(Ids) returns (Response);
}

message Empty{}

message CreateCart{
	string UserId = 1;
	string ProductItemId = 2;
	int32 Quantity = 3;
}

message Cart{
	google.protobuf.StringValue Id = 1;
	google.protobuf.StringValue UserId = 2;
	google.protobuf.StringValue ProductItemId = 3;
	int32 Quantity = 4;
	google.protobuf.Timestamp CreateAt = 5;
	google.protobuf.Timestamp UpdateAt = 6;
}

message Id {
	string SearchId = 1;
}

message Ids{
	repeated Id Item = 1;
}

message Carts{
	repeated Cart Item = 1;
}

message Response {
	int32 StatusCode = 1;
	google.protobuf.StringValue Message = 2;
}